# http_server_c

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.c  stop_server.sh
connection/: connection.c  connection.h
server/: server.c  server.h
